; ModuleID = '/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-data.c_free_cache.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-data.c_free_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cache_free = common dso_local global i32 0, align 4
@cache_size = common dso_local global double 0.000000e+00, align 8
@memory_for_cache = common dso_local global double 0.000000e+00, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @free_cache() #0 {
  br label %1

1:                                                ; preds = %15, %0
  %2 = load i32, i32* @cache_free, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %4, label %9

4:                                                ; preds = %1
  %5 = load double, double* @cache_size, align 8
  %6 = load double, double* @memory_for_cache, align 8
  %7 = fmul double %6, 9.000000e-01
  %8 = fcmp ogt double %5, %7
  br label %9

9:                                                ; preds = %4, %1
  %10 = phi i1 [ true, %1 ], [ %8, %4 ]
  br i1 %10, label %11, label %16

11:                                               ; preds = %9
  %12 = call i32 (...) @cache_free_LRU()
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %11
  br label %16

15:                                               ; preds = %11
  br label %1

16:                                               ; preds = %14, %9
  ret void
}

declare dso_local i32 @cache_free_LRU(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
